# moving_object_detector

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cfg/: Clusterer.cfg  DynamicReconfigure.cfg  EuclideanClusterer.cfg  MovingObjectDetector.cfg  VelocityEstimator.cfg
disparity_image_proc/: CMakeLists.txt  package.xml
disparity_image_proc/include/disparity_image_proc/: disparity_image_processor.h
disparity_image_proc/src/: disparity_image_processor.cpp
docker/: .env  docker-compose.override.yml  docker-compose.sintel.yml  docker-compose.yml  dockerfile
image_crop/: CMakeLists.txt  package.xml
image_crop/include/: image_crop.h
image_crop/src/: image_crop.cpp  image_crop_node.cpp
include/: clusterer.h  color_set.h  euclidean_clusterer.h  flow_3d.h  input_synchronizer.h  kalman_tracker.hpp  lookup_table.h  moving_object_detector.h  moving_objects_tracker.h  process_disparity_image.h  velocity_estimator.h
kkl/: CMakeLists.txt  package.xml
kkl/include/kkl/cvk/: icf_channel_bank.hpp
kkl/include/kkl/math/: gaussian.hpp
kkl/include/kkl/ml/: flann_knn_classifier.hpp  independent_naive_bayes.hpp  online_boosting.hpp
moving_object_detector/: CMakeLists.txt  package.xml
moving_object_detector/cfg/: DynamicReconfigure.cfg  VelocityEstimator.cfg
moving_object_detector/include/: 3d_recontruction.h  clusterer.h  input_synchronizer.h  kalman_tracker.hpp  moving_object_detector.h  moving_objects_tracker.h  process_disparity_image.h  velocity_estimator.h
moving_object_detector/launch/: gazebo_simulation_play_bag.launch  gazebo_simulation_spawn_robots.launch  moving_object_detector.launch  moving_object_detector_sim.launch  record_bag.launch  sim_test.launch
moving_object_detector/msg/: MovingObject.msg  TrackerCovariance.msg  TrackerCovarianceArray.msg
moving_object_detector/nodes/: simulation_exp_result_calc
moving_object_detector/rviz/: debug_view.rviz
moving_object_detector/src/: clusterer.cpp  clusterer_node.cpp  color_set.cpp  display_moving_objects_2d_node.cpp  display_moving_objects_node.cpp  input_synchronizer.cpp  moving_object_detector.cpp  moving_object_detector_node.cpp  moving_objects_tracker.cpp  moving_objects_tracker_node.cpp  process_disparity_image.cpp  velocity2color.cpp  velocity2color_node.cpp  velocity_estimator.cpp  velocity_estimator_node.cpp
moving_object_detector/srv/: InputSynchronizerPublish.srv
moving_object_detector_experiment/: CMakeLists.txt  package.xml
moving_object_detector_experiment/nodes/: simulation_exp_result_calc
moving_object_detector_launch/: CMakeLists.txt  package.xml
moving_object_detector_launch/launch/: .moving_object_detection.launch.swp  detect_moving_object.launch  detect_with_gazebo.launch  detect_with_zed.launch  gazebo_moving_object_detection.launch  gazebo_sim.launch  gazebo_simulation_process.launch  gazebo_simulation_process_nodelet.launch  gazebo_simulation_rviz.launch  gazebo_simulation_world.launch  moving_object_detection.launch  moving_object_detector.launch  viewers.launch  zed_bag_detection.launch  zed_bag_detection_auto_pause.launch
moving_object_detector_launch/params/: zed_common.yaml
moving_object_detector_launch/rqt/: detection_images.perspective  moving_object_detector.perspective
moving_object_detector_launch/rviz/: zed_bag.rviz
moving_object_msgs/: CMakeLists.txt  package.xml
moving_object_msgs/msg/: MovingObject.msg  MovingObjectArray.msg
moving_object_to_marker/: CMakeLists.txt  package.xml
moving_object_to_marker/nodes/: moving_object_to_maker  moving_object_to_marker
moving_object_tracker/: CMakeLists.txt  package.xml
moving_object_tracker/cfg/: .MovingObjectTracker.cfg.swp  MovingObjectTracker.cfg
moving_object_tracker/include/: kalman_tracker.hpp  moving_objects_tracker.h
moving_object_tracker/msg/: TrackerCovarianceArray.msg
moving_object_tracker/src/: moving_objects_tracker.cpp
msg/: ExpResult.msg  (+5 more)
project_moving_objects_on_image/: CMakeLists.txt  package.xml
project_moving_objects_on_image/src/: project_moving_objects_on_image.cpp
scene_flow_clusterer/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
scene_flow_clusterer/cfg/: Clusterer.cfg
scene_flow_clusterer/include/: clusterer_nodelet.h
scene_flow_clusterer/src/: clusterer_node.cpp  clusterer_nodelet.cpp
scene_flow_constructor/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
scene_flow_constructor/cfg/: SceneFlowConstructor.cfg  Velocity2Color.cfg
scene_flow_constructor/include/: input_synchronizer_nodelet.h  odometry_params.h  scene_flow_constructor.h  scene_flow_constructor_nodelet.h
scene_flow_constructor/src/: input_synchronizer_node.cpp  input_synchronizer_nodelet.cpp  scene_flow_constructor.cpp  scene_flow_constructor_node.cpp  scene_flow_constructor_nodelet.cpp
velocity_estimator/: CMakeLists.txt  nodelet_plugins.xml  package.xml
velocity_estimator/cfg/: VelocityEstimator.cfg
velocity_estimator/include/: input_synchronizer.h  input_synchronizer_nodelet.h  velocity_estimator.h  velocity_estimator_nodelet.h
velocity_estimator/include/velocity_estimator/: pcl_point_xyz_velocity.h
velocity_estimator/src/: input_synchronizer.cpp  input_synchronizer_node.cpp  input_synchronizer_nodelet.cpp  velocity2color_node.cpp  velocity_estimator.cpp  velocity_estimator_node.cpp  velocity_estimator_nodelet.cpp
velocity_pc_clusterer/: CMakeLists.txt  nodelet_plugins.xml  package.xml
velocity_pc_clusterer/cfg/: Clusterer.cfg
velocity_pc_clusterer/include/: clusterer.h  clusterer_nodelet.h  lookup_table.h
velocity_pc_clusterer/src/: clusterer.cpp  clusterer_node.cpp  clusterer_nodelet.cpp
viso2_stereo_server/: CMakeLists.txt  README.md  package.xml
viso2_stereo_server/bag/: test.bag
viso2_stereo_server/include/: odometry_params.h  viso2_service_test_client.h  viso2_stereo_server.h
viso2_stereo_server/launch/: test_service.launch
viso2_stereo_server/src/: viso2_service_test_client.cpp  viso2_service_test_client_node.cpp  viso2_stereo_server.cpp  viso2_stereo_server_node.cpp
viso2_stereo_server/srv/: EstimateMotionFromStereo.srv
(+42 files in other folders)
