<?xml version="1.0"?>
<package format="2">
  <name>moving_object_detector</name>
  <version>0.0.0</version>
  <description>移動物体を抽出するノード</description>
  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>gazebo_factory_world</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>mars_rover_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_odometry_msg</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turtlebot3_stereo_description</exec_depend>
  <exec_depend>viso2_ros</exec_depend>
</package>
