<?xml version="1.0"?>
<package format="2">
  <name>disparity_image_proc</name>
  <version>0.0.0</version>
  <description>A library to process disparity image</description>
  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>image_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2</depend>
</package>
