<?xml version="1.0"?>
<package format="2">
  <name>moving_object_detector_launch</name>
  <version>0.0.0</version>
  <description>Launch files to detect moving objects</description>
  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>disparity_visualize</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>odometry_to_marker</exec_depend>
  <exec_depend>project_moving_objects_on_image</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>velocity_estimator</exec_depend>
  <exec_depend>velocity_pc_clusterer</exec_depend>
  <exec_depend>viso2_ros</exec_depend>
</package>
