<?xml version="1.0"?>
<package format="2">
  <name>moving_object_to_marker</name>
  <version>0.0.0</version>
  <description>Convert MovingObjectArray to MarkerArray for RViz</description>
  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>moving_object_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
</package>
