<?xml version="1.0"?>
<package format="2">
  <name>moving_object_tracker</name>
  <version>0.0.0</version>
  <description>A node to track moving objects and remove error by Kalman filter</description>
  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>moving_object_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <build_depend>kkl</build_depend> <!-- from https://aisl-serv6.aisl.cs.tut.ac.jp:20443/koide/grace_person_following -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
