<?xml version="1.0"?>
<package format="2">
  <name>scene_flow_constructor</name>
  <version>0.0.0</version>
  <description>Construct scene flow from camera transform, optical flow and disparity image</description>
  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>disparity_image_proc</depend>
  <depend>disparity_srv</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>optical_flow_msgs</depend>
  <depend>optical_flow_srvs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>viso2_stereo_server</depend>
  <depend>libopencv-dev</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
