<?xml version="1.0"?>
<package format="2">
  <name>scene_flow_constructor</name>
  <version>0.0.0</version>
  <description>Construct scene flow from camera transform, optical flow and disparity image</description>
  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>disparity_image_proc</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>libviso2</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pwc_net</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>sgm_gpu</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>libopencv-dev</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
