<?xml version="1.0"?>
<package format="2">
  <name>velocity_estimator</name>
  <version>0.0.0</version>
  <description>Estimate velocity of each point in pointcloud</description>
  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>disparity_image_proc</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>optical_flow_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>viso2_ros</depend>
  <depend>libopencv-dev</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
