<?xml version="1.0"?>
<package format="2">
  <name>velocity_pc_clusterer</name>
  <version>0.0.0</version>
  <description>Clustering velocity pointcloud to detect moving objects</description>
  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>moving_object_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <build_depend>velocity_estimator</depend>
</package>
