<package format="2">
  <name>viso2_stereo_server</name>
  <version>0.0.1</version>
  <description>Provide stereo visual odometry service using libviso2</description>

  <license>GPL</license>

  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>libviso2</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <build_depend>message_generation</build_depend> 
  <exec_depend>message_runtime</exec_depend>
  <!-- rosdep key -->
  <depend>libopencv-dev</depend>
</package>
